--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.dst</groupId>
     <artifactId>getdatafromdb</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.4</version>
     <name>getdatafromdb</name>
     <description>Export DB to CSV</description>
 
